[tool.poetry]
name = "flaskproject1"
version = "0.1.0"
description = ""
authors = ["fredsonchaves07 <fredsonchaves07@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
pre-commit = "^2.19.0"
black = "^22.3.0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
